# Bills_Master_cpp

./: .gitignore  BillParser.cpp  BillParser.h  BillReporter.cpp  BillReporter.h  Bill_Parser.cpp  Bill_Parser.h  Bill_Reporter.cpp  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DatabaseInserter.cpp  DatabaseInserter.h  Database_Inserter.cpp  Database_Inserter.h  LineValidator.cpp  LineValidator.h  Line_Validator.cpp  Line_Validator.h  Parsed_Record.h  README.md  SECURITY.md  TODO.md  build.gradle.kts  build.sh  gradle.properties  main.cpp  pyproject.toml  settings.gradle.kts
Bills_Master/: CMakeLists.txt  bill_validator.cpp  build.py  build.sh  build_debug.py  build_debug.sh  build_utils.py  config.py  main.cpp  main_command.cpp  main_commond.cpp
Bills_Master/AppController/: AppController.cpp  AppController.h
Bills_Master/app_controller/: AppController.cpp  AppController.h  ExportController.cpp  ExportController.h  ProcessStats.h  WorkflowController.cpp
Bills_Master/cmake/: compiler_options.cmake  dependencies.cmake  plugins.cmake  source_files.cmake  targets.cmake
Bills_Master/common/: common_utils.h  pch.h  version.h
Bills_Master/config/: Modifier_Config.json  Validator_Config.json
Bills_Master/database/: Database_Inserter.cpp  Database_Inserter.h
Bills_Master/db_insert/: DataProcessor.cpp  DataProcessor.h  insert.cpp  insert.h  parser.cpp  parser.h
Bills_Master/db_insert/bill_structures/: BillStructures.h
Bills_Master/db_insert/insertor/: BillInserter.cpp  BillInserter.h
Bills_Master/db_insert/parser/: BillParser.cpp  BillParser.h
Bills_Master/file_handler/: FileHandler.cpp  FileHandler.h
Bills_Master/parsing/: Bill_Parser.cpp  Bill_Parser.h  Line_Validator.cpp  Line_Validator.h
Bills_Master/queries/: Bill_Queries.cpp  Bill_Queries.h
Bills_Master/query/: MonthlyQuery.cpp  MonthlyQuery.h  QueryDb.cpp  QueryDb.h  ReportFormat.h  YearlyQuery.cpp  YearlyQuery.h  query_agent.cpp  query_agent.h
Bills_Master/query/components/monthly_report/: MonthQuery.cpp  MonthQuery.h  MonthlyReportGenerator.cpp  MonthlyReportGenerator.h  ReportData.h  ReportSorter.cpp  ReportSorter.h
Bills_Master/query/components/yearly_report/: YearQuery.cpp  YearlyDataReader.cpp  YearlyDataReader.h  YearlyReportGenerator.cpp  YearlyReportGenerator.h
Bills_Master/query/core/: BillMetadataReader.cpp  QueryDb.cpp  QueryDb.h  ReportExporter.h
Bills_Master/query/export/: ReportExporter.cpp  ReportExporter.h
Bills_Master/query/export_bills/: ReportExporter.cpp  ReportExporter.h
Bills_Master/query/metadata_reader/: BillMetadataReader.cpp
Bills_Master/query/month/: MonthlyReportGenerator.cpp  MonthlyReportGenerator.h
Bills_Master/query/month/_month_data/: ReportData.h
Bills_Master/query/month/_month_format/: LatexReportFormatter.cpp  LatexReportFormatter.h  ReportFormatter.cpp  ReportFormatter.h  TypstReportFormatter.cpp  TypstReportFormatter.h
Bills_Master/query/year/: YearlyReportGenerator.cpp  YearlyReportGenerator.h
Bills_Master/reporting/: Bill_Reporter.h
Bills_Master/reprocessing/: BillModifier.cpp  BillValidator.cpp  CMakeLists.txt  Reprocessor.cpp  Reprocessor.h  compile_ucrt64.bat  wrapper.cpp
Bills_Master/reprocessing/modifier/: BillModifier.cpp  BillModifier.h
Bills_Master/reprocessing/validator/: BillConfig.cpp  BillConfig.h  BillProcessor.cpp  BillProcessor.h  BillValidator.cpp  BillValidator.h  ValidationResult.cpp  ValidationResult.h
Bills_Master/script/: build_debug.py  build_utils.py  config.py
Bills_Master/src/: main.cpp  main_command.cpp  pch.hpp
Bills_Master/src/app_controller/: AppController.cpp  AppController.h  AppController.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ExportController.cpp  ProcessStats.h  ProcessStats.hpp  WorkflowController.cpp  WorkflowController.hpp
Bills_Master/src/command_handler/: CommandFacade.cpp  CommandFacade.hpp  usage_help.cpp  usage_help.hpp
Bills_Master/src/common/: ProcessStats.hpp  common_utils.h  common_utils.hpp  pch.h  version.h  version.hpp
Bills_Master/src/common_structures/: CommonData.hpp
Bills_Master/src/config/: Modifier_Config.json  Validator_Config.json
Bills_Master/src/config_validator/: ConfigValidator.cpp  ConfigValidator.hpp
Bills_Master/src/db_insert/: DataProcessor.cpp  DataProcessor.h  DataProcessor.hpp
Bills_Master/src/file_handler/: FileHandler.cpp  FileHandler.h  FileHandler.hpp
Bills_Master/src/reprocessing/: CMakeLists.txt  Reprocessor.cpp  Reprocessor.h  Reprocessor.hpp  wrapper.cpp
Bills_Master/src/usage_help/: usage_help.cpp  usage_help.hpp
Bills_Master/usage_help/: usage_help.cpp  usage_help.h
apps/bills_cli/: AGENTS.md  CMakeLists.txt  README.md  notices.toml
apps/bills_cli/cmake/: AddFormatTarget.cmake  AddTidyTarget.cmake  compiler_options.cmake  dependencies.cmake  plugins.cmake  project_setup.cmake  report_formatters.cmake  source_files.cmake  targets.cmake
apps/bills_cli/script/: build.sh  build_fast.sh  build_tidy.sh  run_tidy_manual.sh  run_tidy_split_manual.sh
apps/bills_cli/scripts/: build.sh  build_fast.sh  dist.sh  dist_debug.sh
apps/bills_cli/src/: pch.hpp
apps/bills_core/: AGENTS.md  CMakeLists.txt  README.md
apps/bills_core/cmake/: source_files.cmake
apps/bills_windows_cli/: CMakeLists.txt
apps/bills_windows_cli/cmake/: compiler_options.cmake  compiler_select.cmake  dependencies.cmake  source_files.cmake
apps/bills_windows_cli/script/: build.sh  build_tidy.sh
apps/log_generator/: CMakeLists.txt
apps/log_generator/docs/: HISTORY.md
apps/log_generator/src/: main.cpp
libs/bills_core/: AGENTS.md  CMakeLists.txt  README.md  notices.toml
libs/bills_core/cmake/: source_files.cmake
libs/bills_io/: AGENTS.md  CMakeLists.txt  README.md  notices.toml
libs/io/: AGENTS.md  CMakeLists.txt  README.md  notices.toml
libs/io/src/io/: io_factory.cpp  (+3 more)
log_generator/: CMakeLists.txt  build.sh  config.json  generator.cpp
main/: CMakeLists.txt  main.cpp
main/parsing/: Bill_Parser.cpp
test/log_generator/: CMakeLists.txt  config.json  generator.cpp
test/log_generator/_internal/: BillGenerator.cpp  BillGenerator.h  utils.h
(+1803 files in other folders)
